==> lsxnju/-Electronic-Design-Contest/数码管+编码输出(使用delay)+检波/数码管+编码输出(使用delay)+检波/HARDWARE/KeyBoard/KeyBoard.c <==
#include "KeyBoard.h"
#include "sys.h"
#include "delay.h"
#include "lcd.h"
#include "TM1637.h"
#define LCD12864 0
#define TFTLCD 1			// 1:On  0: Off
#define TFTFontSize 32

void ENABLE_KeyBoard_CLK(void)
{
	__HAL_RCC_GPIOB_CLK_ENABLE();           //开启GPIOB时钟
	__HAL_RCC_GPIOG_CLK_ENABLE();           //开启GPIOG时钟
}

void ROW_IN_PULL_UP(void)
{
  int i=0;
  GPIO_InitTypeDef ROW_GPIO[4];
  //init row
  for(i=0; i<4; i++)
  {
	ROW_GPIO[i].Mode=GPIO_MODE_INPUT; //输入
	ROW_GPIO[i].Speed=GPIO_SPEED_HIGH; //高速  
	ROW_GPIO[i].Pull=GPIO_PULLUP; //上拉
  }
	ROW_GPIO[0].Pin=ROW0_GPIO_BIT;
	ROW_GPIO[1].Pin=ROW1_GPIO_BIT;
	ROW_GPIO[2].Pin=ROW2_GPIO_BIT;
	ROW_GPIO[3].Pin=ROW3_GPIO_BIT;

	HAL_GPIO_Init(ROW0_GPIO, &ROW_GPIO[0]);
	HAL_GPIO_Init(ROW1_GPIO, &ROW_GPIO[1]);
	HAL_GPIO_Init(ROW2_GPIO, &ROW_GPIO[2]);
	HAL_GPIO_Init(ROW3_GPIO, &ROW_GPIO[3]);
}

void ROW_OUT_L(void)
{
  int i=0;
  GPIO_InitTypeDef ROW_GPIO[4];
  //init row
  for(i=0; i<4; i++)
  {
	  ROW_GPIO[i].Mode=GPIO_MODE_OUTPUT_PP; //推挽输出
	  ROW_GPIO[i].Speed=GPIO_SPEED_HIGH; //高速(100M)  
	  ROW_GPIO[i].Pull=GPIO_PULLDOWN; //下拉
  }
	ROW_GPIO[0].Pin=ROW0_GPIO_BIT;
	ROW_GPIO[1].Pin=ROW1_GPIO_BIT;
	ROW_GPIO[2].Pin=ROW2_GPIO_BIT;
	ROW_GPIO[3].Pin=ROW3_GPIO_BIT;

	HAL_GPIO_Init(ROW0_GPIO, &ROW_GPIO[0]);
	HAL_GPIO_Init(ROW1_GPIO, &ROW_GPIO[1]);
	HAL_GPIO_Init(ROW2_GPIO, &ROW_GPIO[2]);
	HAL_GPIO_Init(ROW3_GPIO, &ROW_GPIO[3]);
  ROW_L;
}

void COL_OUT_L(void)
{
  int i=0;
  GPIO_InitTypeDef COL_GPIO[4];
  //init col
  for(i=0; i<4; i++)
  {
	  COL_GPIO[i].Mode=GPIO_MODE_OUTPUT_PP; //推挽输出
	  COL_GPIO[i].Speed=GPIO_SPEED_HIGH; //高速(100M)  
	  COL_GPIO[i].Pull=GPIO_PULLDOWN; //下拉
  }
  COL_GPIO[0].Pin=COL0_GPIO_BIT;
  COL_GPIO[1].Pin=COL1_GPIO_BIT;
  COL_GPIO[2].Pin=COL2_GPIO_BIT;
  COL_GPIO[3].Pin=COL3_GPIO_BIT;

  	HAL_GPIO_Init(COL0_GPIO, &COL_GPIO[0]);
	HAL_GPIO_Init(COL1_GPIO, &COL_GPIO[1]);
	HAL_GPIO_Init(COL2_GPIO, &COL_GPIO[2]);
	HAL_GPIO_Init(COL3_GPIO, &COL_GPIO[3]);
  COL_L;
}

void COL_IN_PULL_UP(void)
{
  int i=0;
  GPIO_InitTypeDef COL_GPIO[4];
  //init col
  for(i=0; i<4; i++)
  {
	COL_GPIO[i].Mode=GPIO_MODE_INPUT; //输入
	COL_GPIO[i].Speed=GPIO_SPEED_HIGH; //高速100M  
	COL_GPIO[i].Pull=GPIO_PULLUP; //上拉
  }
  COL_GPIO[0].Pin=COL0_GPIO_BIT;
  COL_GPIO[1].Pin=COL1_GPIO_BIT;
  COL_GPIO[2].Pin=COL2_GPIO_BIT;
  COL_GPIO[3].Pin=COL3_GPIO_BIT;

	HAL_GPIO_Init(COL0_GPIO, &COL_GPIO[0]);
	HAL_GPIO_Init(COL1_GPIO, &COL_GPIO[1]);
	HAL_GPIO_Init(COL2_GPIO, &COL_GPIO[2]);
	HAL_GPIO_Init(COL3_GPIO, &COL_GPIO[3]);
}
