==> Minaduki-Shigure/Summer_Grand_Operation_Library/STemWin_Migration_Test/ADF4351DEMO/HARDWARE/KeyBoard/KeyBoard.c <==
#include "KeyBoard.h"
#include "sys.h"
#include "delay.h"
#include "LCD12864.h"
#include "ili93xx.h"
#define LCD12864 0
#define TFTLCD 1			// 1:On  0: Off
#define TFTFontSize 32

void ENABLE_KeyBoard_CLK(void)
{
  RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOC, ENABLE);
  RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA, ENABLE);
}

void ROW_IN_PULL_UP(void)
{
  int i=0;
  GPIO_InitTypeDef ROW_GPIO[4];
  //init row
  for(i=0; i<4; i++)
  {
    ROW_GPIO[i].GPIO_Mode=GPIO_Mode_IN;
    ROW_GPIO[i].GPIO_Speed=GPIO_Speed_100MHz;
    ROW_GPIO[i].GPIO_PuPd=GPIO_PuPd_UP;
  }
  ROW_GPIO[0].GPIO_Pin=ROW0_GPIO_BIT;
  ROW_GPIO[1].GPIO_Pin=ROW1_GPIO_BIT;
  ROW_GPIO[2].GPIO_Pin=ROW2_GPIO_BIT;
  ROW_GPIO[3].GPIO_Pin=ROW3_GPIO_BIT;
  GPIO_Init(ROW0_GPIO, &ROW_GPIO[0]);
  GPIO_Init(ROW1_GPIO, &ROW_GPIO[1]);
  GPIO_Init(ROW2_GPIO, &ROW_GPIO[2]);
  GPIO_Init(ROW3_GPIO, &ROW_GPIO[3]);
}

void ROW_OUT_L(void)
{
  int i=0;
  GPIO_InitTypeDef ROW_GPIO[4];
  //init row
  for(i=0; i<4; i++)
  {
    ROW_GPIO[i].GPIO_Mode=GPIO_Mode_OUT;
    ROW_GPIO[i].GPIO_Speed=GPIO_Speed_100MHz;
    ROW_GPIO[i].GPIO_OType = GPIO_OType_PP;
    ROW_GPIO[i].GPIO_PuPd=GPIO_PuPd_DOWN;
  }
  ROW_GPIO[0].GPIO_Pin=ROW0_GPIO_BIT;
  ROW_GPIO[1].GPIO_Pin=ROW1_GPIO_BIT;
  ROW_GPIO[2].GPIO_Pin=ROW2_GPIO_BIT;
  ROW_GPIO[3].GPIO_Pin=ROW3_GPIO_BIT;
  GPIO_Init(ROW0_GPIO, &ROW_GPIO[0]);
  GPIO_Init(ROW1_GPIO, &ROW_GPIO[1]);
  GPIO_Init(ROW2_GPIO, &ROW_GPIO[2]);
  GPIO_Init(ROW3_GPIO, &ROW_GPIO[3]);
  ROW_L;
}

void COL_OUT_L(void)
{
  int i=0;
  GPIO_InitTypeDef COL_GPIO[4];
  //init col
  for(i=0; i<4; i++)
  {
    COL_GPIO[i].GPIO_Mode=GPIO_Mode_OUT;
    COL_GPIO[i].GPIO_OType = GPIO_OType_PP;
    COL_GPIO[i].GPIO_Speed=GPIO_Speed_100MHz;
    COL_GPIO[i].GPIO_PuPd=GPIO_PuPd_DOWN;
  }
  COL_GPIO[0].GPIO_Pin=COL0_GPIO_BIT;
  COL_GPIO[1].GPIO_Pin=COL1_GPIO_BIT;
  COL_GPIO[2].GPIO_Pin=COL2_GPIO_BIT;
  COL_GPIO[3].GPIO_Pin=COL3_GPIO_BIT;
  GPIO_Init(COL0_GPIO, &COL_GPIO[0]);
  GPIO_Init(COL1_GPIO, &COL_GPIO[1]);
  GPIO_Init(COL2_GPIO, &COL_GPIO[2]);
  GPIO_Init(COL3_GPIO, &COL_GPIO[3]);
  COL_L;
}

void COL_IN_PULL_UP(void)
{
  int i=0;
  GPIO_InitTypeDef COL_GPIO[4];
  //init col
  for(i=0; i<4; i++)
  {
    COL_GPIO[i].GPIO_Mode=GPIO_Mode_IN;
//		COL_GPIO[i].GPIO_OType = GPIO_OType_PP;
    COL_GPIO[i].GPIO_Speed=GPIO_Speed_100MHz;
    COL_GPIO[i].GPIO_PuPd=GPIO_PuPd_UP;
  }
  COL_GPIO[0].GPIO_Pin=COL0_GPIO_BIT;
  COL_GPIO[1].GPIO_Pin=COL1_GPIO_BIT;
  COL_GPIO[2].GPIO_Pin=COL2_GPIO_BIT;
  COL_GPIO[3].GPIO_Pin=COL3_GPIO_BIT;
  GPIO_Init(COL0_GPIO, &COL_GPIO[0]);
  GPIO_Init(COL1_GPIO, &COL_GPIO[1]);
  GPIO_Init(COL2_GPIO, &COL_GPIO[2]);
  GPIO_Init(COL3_GPIO, &COL_GPIO[3]);
}
